# TypeAgent

./: .copilot-instructions.md  .gitattributes  .gitignore  .gitmodules  .repolicy.json  CONTRIBUTIONS.md  README.md  SUPPORT.md  TODO.md  excalidraw_agent_design.md  node_modules  package-lock.json  package.json  sprint-status.md
python/ta/: .gitignore  AGENTS.md  Makefile  NOTES.md  README.md  TADA.md  TODO.md  auth.py  demo.py  emails-shm  emails-wal  id.py  main.py  make.bat  podcast_data.json  pyproject.toml  requirements.txt  writing-python.instructions.md
python/ta/.github/: copilot-instructions.md
python/ta/doc/: typeagent-architecture.md
python/ta/gmail/: .gitignore  gmail_dump.py
python/ta/spec/: coverage.txt  indexes_overview.md  storage_future_extensions.md  storage_immediate_implementation.md  storage_implementation_plan.md  storage_spec.md
python/ta/test/: cmpsearch.py  fixtures.py  test_auth.py  test_collections.py  test_conversation_metadata.py  test_convindex.py  test_demo.py  test_embeddings.py  test_episode_53_related_terms_population.py  test_incremental_index.py  test_interfaces.py  test_knowledge.py  test_kplib.py  test_message_text_index_population.py  test_message_text_index_serialization.py  test_messageindex.py  test_podcasts.py  test_property_index_population.py  test_propindex.py  test_query.py  test_related_terms_fast.py  test_related_terms_index_population.py  test_reltermsindex.py  test_searchlib.py  test_secindex.py  test_secindex_storage_integration.py  test_semrefindex.py  test_serialization.py  test_sqlite_indexes.py  test_sqlite_indexes_coverage.py  test_sqlitestore.py  test_storage_indexes.py  test_storage_providers_unified.py  test_timestampindex.py  test_transcripts.py  test_utils.py  test_vectorbase.py  vizcmp.py
python/ta/testdata/: Confuse-A-Cat.vtt  Episode_53_AdrianTchaikovsky_index_data.json  Parrot_Sketch.vtt  PythonDocumentary.vtt  npr.txt
python/ta/tests/: test_demo.py
python/ta/tools/: DESIGN.md  add_copyright.py  ingest_vtt.py  main.py  release.py  test_email.py  utool.py  vizcmp.py
python/ta/typeagent/aitools/: auth.py  embeddings.py  utils.py  vectorbase.py
python/ta/typeagent/demo/: __main__.py  answer_context_schema.py  answer_response_schema.py  querycompiler.py  search_query_schema.py  search_schema.py  ui.py
python/ta/typeagent/emails/: emailMemory.py  email_import.py  email_memory.py  email_message.py
python/ta/typeagent/knowpro/: answer_context_schema.py  answer_response_schema.py  answers.py  collections.py  common.py  convindex.py  convknowledge.py  convsettings.py  convthreads.py  convutils.py  date_time_schema.py  field_helpers.py  fuzzyindex.py  importing.py  interfaces.py  knowledge.py  kplib.py  messageindex.py  messageutils.py  propindex.py  query.py  relatedtermsindex.py  reltermsindex.py  search.py  search_query_schema.py  searchlang.py  searchlib.py  secindex.py  semrefindex.py  serialization.py  settings.py  storage.py  textlocationindex.py  textlocindex.py  timestampindex.py  utils.py  vectorbase.py
python/ta/typeagent/mcp/: server.py
python/ta/typeagent/memconv/: __main__.py  import_podcasts.py
python/ta/typeagent/podcasts/: __main__.py  import_podcasts.py  podcast.py  podcast_import.py
python/ta/typeagent/pydai/: generic_query.py
python/ta/typeagent/storage/: __init__.py  memorystore.py  sqlitestore.py  utils.py
python/ta/typeagent/transcripts/: README.md  transcript.py  transcript_import.py
python/ta/typechat/: __about__.py  __init__.py
(+2093 files in other folders)
