[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "typeagent"
version = "0.1.0"
description = "TypeAgent implements an agentic memory framework."
authors = [
  { name = "Guido van Rossum", email = "gvanrossum@gmail.com" },
  { name = "Steven Lucco" },
  { name = "Umesh Madan" },
  { name = "Guido van Rossum" },
]
requires-python = ">=3.12"
dependencies = [
  "typechat @ git+https://github.com/microsoft/TypeChat#subdirectory=python",
]

[tool.setuptools]
# Needed so setuptools doesn't complain about testdata.
packages = [
    "typeagent",
    "typeagent.aitools",
    "typeagent.knowpro",
    "typeagent.podcasts",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
